--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -17,6 +17,20 @@
         </td>
         <td><%= link_to book.title,book, class: "book_#{book.id}" %></td>
         <td><%= book.body %></td>
+        <% if book.favorited_by?(current_user) %>
+        <td>
+          <%= link_to book_favorites_path(book), method: :delete do %>
+          　💛<%= book.favorites.count %>
+          <% end %>
+        </td>
+        <% else %>
+        <td>
+          <%= link_to book_favorites_path(book), method: :post do %>
+            💙<%= book.favorites.count %>
+          <% end %>
+        </td>
+        <% end %>
+        <td><%= link_to "#{book.book_comments.count} コメント", book_path(book.id) %></td>
       </tr>
     <% end %>
   </tbody>
