--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -17,11 +17,43 @@
           </td>
           <td><%= link_to @book.title, @book %></td>
           <td><%= @book.body %></td>
+          <% if @book.favorited_by?(current_user) %>
+          <td>
+            <%= link_to book_favorites_path(@book), method: :delete do %>
+            　💛<%= @book.favorites.count %>
+            <% end %>
+          </td>
+          <% else %>
+          <td>
+            <%= link_to book_favorites_path(@book), method: :post do %>
+              💙<%= @book.favorites.count %>
+            <% end %>
+          </td>
+          <% end %>
+          <td>
+            コメント数：<%= @book.book_comments.count %>
+          </td>
           <% if @book.user == current_user %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success edit_book_#{@book.id}" %></td>
             <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_book_#{@book.id}"%></td>
           <% end %>
-        </tr>
+       　 </tr>
+      </table>
+      <table class = "table">
+        <% @book.book_comments.each do |book_comment| %>
+           <p></p>
+           <%= book_comment.user.name %>
+           <%= book_comment.created_at.strftime('%Y/%m/%d') %><%= book_comment.comment %>
+           <% if book_comment.user == current_user %>
+           <%= link_to "削除", book_book_comment_path(book_comment.book, book_comment), method: :delete %>
+           <% end %>
+        <% end %>
+        <div class= "form-group">
+           <%= form_with model: [@book, @book_comment] do |f| %>
+           <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに" %>
+           <%= f.submit "送信" %>
+           <% end %>
+        </div>
       </table>
     </div>
   </div>
