--- a/app/views/relationships/_follow.html.erb
+++ b/app/views/relationships/_follow.html.erb
@@ -1,5 +1,5 @@
-<% if users.exists? %>
-  <% users.each do |user| %>
+<% if user.exists? %>
+  <% user.each do |user| %>
     <table>
       <thead>
         <tr>
