--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -10,11 +10,11 @@
   </tr>
   <tr>
     <th>follows</th>
-    <th><%= link_to user.followings.count, relationships_followings_path(user.id) %></th>
+    <th><%= link_to user.followings.count, user_followings_path(user.id) %></th>
   </tr>
   <tr>
     <th>followers</th>
-    <th><%= link_to user.followers.count, relationships_followers_path(user.id) %></th>
+    <th><%= link_to user.followers.count, user_followers_path(user.id) %></th>
   </tr>
 </table>
 
