--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
 
   <body>
     <%= render 'layouts/header' %>
+    <%= render 'layouts/search' %>
       <main>
         <p id="notice"><%= notice %></p>
         <%= yield %>
