--- a/app/views/searches/index.html.erb
+++ b/app/views/searches/index.html.erb
@@ -1,24 +1,7 @@
-<h2>Results index</h2>
-
-<table class="table table-hover table-inverse">
-  
-  <% if @range == "User" %>
-    <tbody>
-      <% @users.each do |user| %>
-        <tr>
-          <td><%= user.name %></td>
-        </tr>
-      <% end %>
-    </tbody>
-  <% else %>
-
-    <tbody>
-      <% @books.each do |book| %>
-        <tr>
-          <td><%= book.title %></td>
-          <td><%= book.body %></td>
-        </tr>
-      <% end %>
-    </tbody>
-  <% end %>
-</table>
+<% if @range == 'User' %>
+	<h3>Users search for "<%= @search %>"</h3>
+  <%= render 'users/index', users: @users %>
+<% elsif @range == 'Book' %>
+	<h3>Books search for "<%= @search %>"</h3>
+  <%= render 'books/index', books: @books %>
+<% end %>
