--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -1,4 +1,3 @@
-
 <table class='table table-hover table-inverse'>
   <thead>
     <tr>
@@ -17,20 +16,12 @@
         </td>
         <td><%= link_to book.title,book, class: "book_#{book.id}" %></td>
         <td><%= book.body %></td>
-        <% if book.favorited_by?(current_user) %>
+        <td>コメント数: <%= book.book_comments.count %></td>
         <td>
-          <%= link_to book_favorites_path(book), method: :delete do %>
-          　💛<%= book.favorites.count %>
-          <% end %>
+          <div id="favorite_btn_<%= book.id %>">
+            <%= render "favorites/btn", book: book %>
+          </div>
         </td>
-        <% else %>
-        <td>
-          <%= link_to book_favorites_path(book), method: :post do %>
-            💙<%= book.favorites.count %>
-          <% end %>
-        </td>
-        <% end %>
-        <td><%= link_to "#{book.book_comments.count} コメント", book_path(book.id) %></td>
       </tr>
     <% end %>
   </tbody>
