--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -2,9 +2,9 @@
   <div class='row'>
     <div class='col-md-3'>
       <h2>User info</h2>
-      <%= render 'users/info', user: @user %>
+      <%= render 'users/info', user: @book.user %>
       <h2 class="mt-3">New book</h2>
-      <%= render 'form', book: @book1 %>
+      <%= render 'form', book: Book.new %>
     </div>
     <div class='col-md-8 offset-md-1'>
   		<h2>Book detail</h2>
@@ -17,44 +17,22 @@
           </td>
           <td><%= link_to @book.title, @book %></td>
           <td><%= @book.body %></td>
-          <% if @book.favorited_by?(current_user) %>
+          <td>コメント数: <%= @book.book_comments.count %></td>
           <td>
-            <%= link_to book_favorites_path(@book), method: :delete do %>
-            　💛<%= @book.favorites.count %>
-            <% end %>
-          </td>
-          <% else %>
-          <td>
-            <%= link_to book_favorites_path(@book), method: :post do %>
-              💙<%= @book.favorites.count %>
-            <% end %>
-          </td>
-          <% end %>
-          <td>
-            コメント数：<%= @book.book_comments.count %>
+          <div id="favorite_btn_<%= @book.id %>">
+            <%= render "favorites/btn", book: @book %>
+          </div>
           </td>
           <% if @book.user == current_user %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success edit_book_#{@book.id}" %></td>
             <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_book_#{@book.id}"%></td>
           <% end %>
-       　 </tr>
+        </tr>
       </table>
-      <table class = "table">
-        <% @book.book_comments.each do |book_comment| %>
-           <p></p>
-           <%= book_comment.user.name %>
-           <%= book_comment.created_at.strftime('%Y/%m/%d') %><%= book_comment.comment %>
-           <% if book_comment.user == current_user %>
-           <%= link_to "削除", book_book_comment_path(book_comment.book, book_comment), method: :delete %>
-           <% end %>
-        <% end %>
-        <div class= "form-group">
-           <%= form_with model: [@book, @book_comment] do |f| %>
-           <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに" %>
-           <%= f.submit "送信" %>
-           <% end %>
-        </div>
-      </table>
+
+      <%= render "book_comments/index", book: @book %>
+      <%= render "book_comments/form", book: @book, book_comment: @book_comment %>
+
     </div>
   </div>
 </div>
